# nrwl-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  angular.json  io_bazel_rules_sass.patch  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/demo/: .eslintrc.json  BUILD.bazel
apps/demo/src/: BUILD.bazel  index.dev.html  main.dev.ts  main.prod.ts  rxjs_shims.js
apps/demo/src/app/: BUILD.bazel  app.component.ts  app.module.ts
libs/common-pipes/: BUILD.bazel  README.md  jest.config.js
libs/common-pipes/src/: BUILD.bazel  index.ts
libs/common-pipes/src/lib/: common-pipes.module.ts
tools/: BUILD.bazel  angular_ts_library.bzl
