load("//tools:angular_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "multi_sass_binary")

package(default_visibility = ["//:__subpackages__"])

multi_sass_binary(
    name = "app-styles",
    srcs = [
        "app.component.scss"
    ]
)

ng_ts_library(
    name = "app",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    angular_assets = [":app-styles","app.component.html"],
    tsconfig = "//apps/demo/src:tsconfig-demo",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//rxjs",
        "//libs/common-pipes/src:common-pipes"
    ],
)